--- a/lesson6/monkey/opsweb/templates/users.html
+++ b/lesson6/monkey/opsweb/templates/users.html
@@ -51,6 +51,37 @@
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <h1 class="page-header">Dashboard</h1>
 
+				<a href="/users/add"><button type="button" class="btn btn-primary" >添加用户</button></a>
+
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>用户名</th>
+                                <th>邮箱</th>
+                                <th>密码</th>
+                                <th>操作</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+							{% for user in users %}
+                            <tr>
+								<td>{{ loop.index }}</td>
+								<td>{{ user['username'] }}</td>
+								<td>{{ user['password'] }}</td>
+								<td>{{ user['email'] }}</td>
+                                <td>
+                                    <a href='#'>删除</a>
+                                    <a href='#'>修改`</a>
+                                </td>
+                            </tr>
+							{% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+              </div>
             </div>
         </div>
 
