--- a/lesson6/monkey/opsweb/templates/users_add.html
+++ b/lesson6/monkey/opsweb/templates/users_add.html
@@ -49,8 +49,37 @@
                     </ul>
                 </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <h1 class="page-header">Dashboard</h1>
+                <h1 class="page-header">添加用户</h1>
 
+                  <div class="col-sm-6">
+                    <form class="form-horizontal" action="/users/add" method="POST">
+                      <div class="form-group">
+                        <label for="inputUser" class="col-sm-2 control-label">Username</label>
+                        <div class="col-sm-10">
+                          <input type="text" class="form-control" id="inputUser" placeholder="Username" name='username'>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword3" placeholder="Password" name='password'>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                          <input type="email" class="form-control" id="inputEmail3" placeholder="Email" name='email'>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-default">注册</button>
+                        </div>
+                      </div>
+                    </form>
+
+              </div>
+              </div>
             </div>
         </div>
 
