丢弃不要的js和css文件

--- a/lesson7/monkey/opsweb/templates/index.html
+++ b/lesson7/monkey/opsweb/templates/index.html
@@ -7,12 +7,14 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="Preview page of Metronic Admin Theme #1 for blank page layout" name="description" />
         <meta content="" name="author" />
+		
         <link href="/static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <link href="/static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
         <link href="/static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="/static/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
         <link href="/static/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
-        <link href="/statis/imgs/favicon.ico" rel="shortcut icon"/> 
+	<link href="/static/imgs/favicon.ico" rel="shortcut icon" /> 
+
         <style>
             @media (min-width: 768px){
                 .navbar-nav>li>a {
@@ -20,8 +22,7 @@
                     padding-bottom: 11px;
                 }
             }
-        </style>		
-
+        </style>
 	</head>
 
     <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
@@ -30,7 +31,7 @@
                 <div class="page-header-inner ">
                     <div class="page-logo">
                         <a href="/">
-                            <img src="../static/layouts/layout/img/logo.png" alt="logo" class="logo-default" /> </a>
+                            <img src="/static/layouts/layout/img/logo.png" alt="logo" class="logo-default" /> </a>
                         <div class="menu-toggler sidebar-toggler">
                             <span></span>
                         </div>
@@ -41,7 +42,7 @@
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="img-circle" src="../static/layouts/layout/img/avatar3_small.jpg" />
+                                    <img alt="" class="img-circle" src="/static/layouts/layout/img/avatar3_small.jpg" />
                                     <span class="username username-hide-on-mobile"> actual6 </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
@@ -134,12 +135,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- END SIDEBAR -->
-                </div>
-                <!-- END SIDEBAR -->
-                <!-- BEGIN CONTENT -->
                 <div class="page-content-wrapper">
-                    <!-- BEGIN CONTENT BODY -->
                     <div class="page-content">
                         <div class="page-bar">
                             <ul class="page-breadcrumb">
