--- a/lesson7/monkey/opsweb/templates/login.html
+++ b/lesson7/monkey/opsweb/templates/login.html
@@ -8,22 +8,22 @@
         <meta content="Preview page of Metronic Admin Theme #1 for " name="description" />
         <meta content="" name="author" />
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-        <link href="../static/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/css/login-2.min.css" rel="stylesheet" type="text/css" />
-        <link rel="shortcut icon" href="/static/imgs/favicon.ico" /> 
+        <link href="/static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
+        <link href="/static/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/css/login-2.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/imgs/favicon.ico" rel="shortcut icon" /> 
 	</head>
 
     <body class=" login">
         <div class="logo">
             <a href="/login">
-                <img src="../static/imgs/logo-big-white.png" style="height: 17px;" alt="" /> </a>
+                <img src="/static/imgs/logo-big-white.png" style="height: 17px;" alt="" /> </a>
         </div>
         <div class="content">
             <form class="login-form" action="/login" method="post">
@@ -130,20 +130,19 @@
                     <button type="submit" id="register-submit-btn" class="btn red uppercase pull-right">Submit</button>
                 </div>
             </form>
-            <!-- END REGISTRATION FORM -->
         </div>
         <div class="copyright hide"> 2017 &copy; monkey. All rights reserved. </div>
-        <script src="../static/global/plugins/jquery.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-        <script src="../static/js/jquery.validate.min.js" type="text/javascript"></script>
-        <script src="../static/js/additional-methods.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
-        <script src="../static/js/app.min.js" type="text/javascript"></script>
-        <script src="../static/js/login.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/js.cookie.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+        <script src="/static/js/jquery.validate.min.js" type="text/javascript"></script>
+        <script src="/static/js/additional-methods.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
+        <script src="/static/js/app.min.js" type="text/javascript"></script>
+        <script src="/static/js/login.min.js" type="text/javascript"></script>
         <script>
             $(document).ready(function()
             {
