--- a/lesson7/monkey/opsweb/templates/users_add.html
+++ b/lesson7/monkey/opsweb/templates/users_add.html
@@ -7,45 +7,43 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="Preview page of Metronic Admin Theme #1 for blank page layout" name="description" />
         <meta content="" name="author" />
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-        <link href="../static/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
-        <link href="../static/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
-        <link rel="shortcut icon" href="/static/imgs/favicon.ico" /> 
+		
+        <link href="/static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
+        <link href="/static/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
+        <link href="/static/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
+	<link href="/static/imgs/favicon.ico" rel="shortcut icon" /> 
+
+        <style>
+            @media (min-width: 768px){
+                .navbar-nav>li>a {
+                    padding-top: 10px;
+                    padding-bottom: 11px;
+                }
+            }
+        </style>
 	</head>
 
     <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
         <div class="page-wrapper">
-            <!-- BEGIN HEADER -->
             <div class="page-header navbar navbar-fixed-top">
-                <!-- BEGIN HEADER INNER -->
                 <div class="page-header-inner ">
-                    <!-- BEGIN LOGO -->
                     <div class="page-logo">
                         <a href="/">
-                            <img src="../static/layouts/layout/img/logo.png" alt="logo" class="logo-default" /> </a>
+                            <img src="/static/layouts/layout/img/logo.png" alt="logo" class="logo-default" /> </a>
                         <div class="menu-toggler sidebar-toggler">
                             <span></span>
                         </div>
                     </div>
-                    <!-- END LOGO -->
-                    <!-- BEGIN RESPONSIVE MENU TOGGLER -->
                     <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                         <span></span>
                     </a>
-                    <!-- END RESPONSIVE MENU TOGGLER -->
-                    <!-- BEGIN TOP NAVIGATION MENU -->
-      
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="img-circle" src="../static/layouts/layout/img/avatar3_small.jpg" />
+                                    <img alt="" class="img-circle" src="/static/layouts/layout/img/avatar3_small.jpg" />
                                     <span class="username username-hide-on-mobile"> actual6 </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
@@ -57,9 +55,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- END TOP NAVIGATION MENU -->
                 </div>
-                <!-- END HEADER INNER -->
             </div>
 
             <div class="clearfix"> </div>
@@ -127,20 +123,19 @@
                             <li class="nav-item  ">
                                 <a href="javascript:;" class="nav-link nav-toggle">
                                     <i class="icon-settings"></i>
-                                    <span class="title">actual16</span>
+                                    <span class="title">性能监控</span>
                                     <span class="arrow"></span>
                                 </a>
                                 <ul class="sub-menu">
                                     <li class="nav-item  ">
-                                        <a href="form_controls.html" class="nav-link ">
-                                            <span class="title">作业系统
+                                        <a href="/performance_monitor" class="nav-link ">
+                                            <span class="title">主机监控
                                         </a>
                                     </li>            
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <!-- END SIDEBAR -->
                 </div>
                 <div class="page-content-wrapper">
                     <div class="page-content">
@@ -213,7 +208,6 @@
                                                              <h3 style="color:red">{{ errmsg }}</h3>
                                                         </div>
                                                     </form>
-
 											</div>
 								        </div>
 									</div>
@@ -233,17 +227,17 @@
         </div>
       
         <!-- BEGIN CORE PLUGINS -->
-        <script src="../static/global/plugins/jquery.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-        <script src="../static/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-        <script src="../static/global/scripts/app.min.js" type="text/javascript"></script>
-        <script src="../static/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
-        <script src="../static/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
-        <script src="../static/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
-        <script src="../static/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/js.cookie.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+        <script src="/static/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+        <script src="/static/global/scripts/app.min.js" type="text/javascript"></script>
+        <script src="/static/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
+        <script src="/static/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
+        <script src="/static/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
+        <script src="/static/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
         <!-- END THEME LAYOUT SCRIPTS -->
         <script>
             $(document).ready(function()
