--- a/lesson7/monkey/opsweb/templates/users_edit.html
+++ b/lesson7/monkey/opsweb/templates/users_edit.html
@@ -7,26 +7,28 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="Preview page of Metronic Admin Theme #1 for blank page layout" name="description" />
         <meta content="" name="author" />
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+		
         <link href="../static/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <link href="../static/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
         <link href="../static/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-        <link href="../static/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-        <link href="../static/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
         <link href="../static/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
         <link href="../static/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
-        <link href="../static/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
-        <link rel="shortcut icon" href="/static/imgs/favicon.ico" /> 
+		<link href="../static/imgs/favicon.ico" rel="shortcut icon" /> 
+
+        <style>
+            @media (min-width: 768px){
+                .navbar-nav>li>a {
+                    padding-top: 10px;
+                    padding-bottom: 11px;
+                }
+            }
+        </style>
 	</head>
 
     <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
         <div class="page-wrapper">
-            <!-- BEGIN HEADER -->
             <div class="page-header navbar navbar-fixed-top">
-                <!-- BEGIN HEADER INNER -->
                 <div class="page-header-inner ">
-                    <!-- BEGIN LOGO -->
                     <div class="page-logo">
                         <a href="/">
                             <img src="../static/layouts/layout/img/logo.png" alt="logo" class="logo-default" /> </a>
@@ -34,14 +36,9 @@
                             <span></span>
                         </div>
                     </div>
-                    <!-- END LOGO -->
-                    <!-- BEGIN RESPONSIVE MENU TOGGLER -->
                     <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                         <span></span>
                     </a>
-                    <!-- END RESPONSIVE MENU TOGGLER -->
-                    <!-- BEGIN TOP NAVIGATION MENU -->
-      
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
@@ -57,9 +54,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- END TOP NAVIGATION MENU -->
                 </div>
-                <!-- END HEADER INNER -->
             </div>
 
             <div class="clearfix"> </div>
@@ -127,20 +122,19 @@
                             <li class="nav-item  ">
                                 <a href="javascript:;" class="nav-link nav-toggle">
                                     <i class="icon-settings"></i>
-                                    <span class="title">actual16</span>
+                                    <span class="title">性能监控</span>
                                     <span class="arrow"></span>
                                 </a>
                                 <ul class="sub-menu">
                                     <li class="nav-item  ">
-                                        <a href="form_controls.html" class="nav-link ">
-                                            <span class="title">作业系统
+                                        <a href="/performance_monitor" class="nav-link ">
+                                            <span class="title">主机监控
                                         </a>
                                     </li>            
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <!-- END SIDEBAR -->
                 </div>
                 <div class="page-content-wrapper">
                     <div class="page-content">
@@ -152,7 +146,7 @@
                                     <i class="fa fa-angle-right"></i>
                                 </li>
                                 <li>
-                                    <span>用户管理</span>
+                                    <span>用户编辑</span>
                                 </li>
                             </ul>
                         </div>
@@ -160,7 +154,6 @@
 						
 						 <div class="row">
 							<div class="col-md-12">
-							
 								<div class="portlet light">
 									<div class="portlet-body">
 										<div class="table-toolbar">
@@ -213,7 +206,6 @@
                                                              <h3 style="color:red">{{ errmsg }}</h3>
                                                         </div>
                                                     </form>
-
 											</div>
 								        </div>
 									</div>
