--- a/lesson8/fengxiaoli/templates/users_add.html
+++ b/lesson8/fengxiaoli/templates/users_add.html
@@ -280,7 +280,7 @@
                     if (!checkuser(username))
                             return false 
     
-                    type = 'POST'
+                    type = 'GET'
                     url = '/checkuser'
                     data = {username:username}
     
