modify some css

--- a/lesson11/yang_blueprint/app/templates/assets.html
+++ b/lesson11/yang_blueprint/app/templates/assets.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
         {% block csshref %}
         <link href="/static/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
+         <link href="/static/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
         {% endblock %}
 {% block content %}
 <!--标签内容start -->
