--- a/lesson10/fengxiaoli/templates/users.html
+++ b/lesson10/fengxiaoli/templates/users.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block cssref %}
+{% block csshref %}
  <link href="/static/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 {% block modal %}
